# Robotics_Lab

./: README.md  camera_pose.py  client.sh  controller.py  controller.sh  dino_3d_location.py  dino_code.py  labels.txt  leftcam.sh  movement.py  rightcam.sh  server.sh
camera_calibration/: calibration.py
camera_calibration/output/: Rt.txt  outputs.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_controller/lib/custom_controller/: custom_controller
install/custom_controller/share/custom_controller/: package.dsv  package.sh  package.zsh
log/: latest_build
output/left_camera/: location.json
output/right_camera/: location.json
robotics_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robotics_ws/src/custom_controller/: CMakeLists.txt
robotics_ws/src/custom_controller/launch/: custom_controller_launch.py
robotics_ws/src/custom_controller/src/: custom_controller.cpp
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/location_pub/: setup.cfg  setup.py
ros2_ws/src/rgbd_process/: setup.cfg  setup.py
ros2_ws/src/server_client/: package.xml  setup.py
ros2_ws/src/talker_listener/: package.xml  setup.py
sample_input/: camera_info.json  labels.txt
scripts/: leftcam.sh  rightcam.sh  server.sh
subscribed_data/right_camera/: camera_info.json
suscribed_data/left_camera/: camera_info.json
suscribed_data/right_camera/: camera_info.json
webcam_distance/: haarcascade_frontalface_default.xml  webcam_distance_est.py
(+46 files in other folders)
